--- a/Datasets/create_meta.ipynb
+++ b/Datasets/create_meta.ipynb
@@ -49,9 +49,7 @@
     "df['diagnosis'] = diagnosis_list\n",
     "df['dataset'] = ['isic2018']*len(df)\n",
     "df['ID'] = ID_list\n",
-    "df['diagnosis_id'] = df['diagnosis'].astype('category').cat.codes\n",
-    "df['DC_id']  = df['diagnosis_id']  # domain and class id\n",
-    "df['four_id'] = df.index  # sample id in four datasets"
+    "df['diagnosis_id'] = df['diagnosis'].astype('category').cat.codes"
    ]
   },
   {
@@ -394,7 +392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.to_csv(data_folder+'/isic2018/meta_isic2018.csv', index=False)"
+    "df.to_csv(data_folder+'/isic2018/meta_isic2018.csv', index=False)"
    ]
   },
   {
@@ -436,9 +434,7 @@
     "df['diagnosis'] = diagnosis_list\n",
     "df['dataset'] = ['PH2']*len(df)\n",
     "df['ID']=df['Image Name']\n",
-    "df['diagnosis_id'] = df['diagnosis'].astype('category').cat.codes\n",
-    "df['DC_id'] = df['diagnosis_id']+3\n",
-    "df['four_id'] = df.index+2594"
+    "df['diagnosis_id'] = df['diagnosis'].astype('category').cat.codes"
    ]
   },
   {
@@ -827,37 +823,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4    80\n",
-       "3    80\n",
-       "5    40\n",
-       "Name: DC_id, dtype: int64"
-      ]
-     },
-     "execution_count": 177,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# print(df['Common Nevus'].value_counts())\n",
-    "# print(df['Atypical Nevus'].value_counts())\n",
-    "# print(df['Melanoma'].value_counts())\n",
-    "df['DC_id'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.to_csv(data_folder+'/PH2/meta_PH2.csv',index=False)"
+    "df.to_csv(data_folder+'/PH2/meta_PH2.csv',index=False)"
    ]
   },
   {
@@ -896,9 +866,7 @@
     "    diagnosis_list.append(df.iloc[i]['dx'].title())\n",
     "df['ID']=ID_list\n",
     "df['diagnosis'] = diagnosis_list\n",
-    "df['diagnosis_id'] = df['diagnosis'].astype('category').cat.codes\n",
-    "df['DC_id'] = df['diagnosis_id']+6\n",
-    "df['four_id'] = df.index+2794"
+    "df['diagnosis_id'] = df['diagnosis'].astype('category').cat.codes"
    ]
   },
   {
@@ -1112,7 +1080,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.to_csv(data_folder+'/DMF/meta_DMF.csv', index=False)"
+    "df.to_csv(data_folder+'/DMF/meta_DMF.csv', index=False)"
    ]
   },
   {
@@ -1194,9 +1162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['diagnosis_id'] = df['diagnosis'].astype('category').cat.codes\n",
-    "df['DC_id'] = df['diagnosis_id']+13\n",
-    "df['four_id'] = df.index+4006"
+    "df['diagnosis_id'] = df['diagnosis'].astype('category').cat.codes"
    ]
   },
   {
@@ -1366,511 +1332,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14    119\n",
-       "13     87\n",
-       "Name: DC_id, dtype: int64"
-      ]
-     },
-     "execution_count": 194,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['DC_id'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.to_csv(SKD_meta_path, index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dataset</th>\n",
-       "      <th>ID</th>\n",
-       "      <th>diagnosis</th>\n",
-       "      <th>diagnosis_id</th>\n",
-       "      <th>DC_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>SKD</td>\n",
-       "      <td>dermis_AMM1_orig</td>\n",
-       "      <td>Melanoma</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>SKD</td>\n",
-       "      <td>dermis_LMM2_orig</td>\n",
-       "      <td>Melanoma</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>SKD</td>\n",
-       "      <td>dermis_SSM1_orig</td>\n",
-       "      <td>Melanoma</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>SKD</td>\n",
-       "      <td>dermis_LMM5_orig</td>\n",
-       "      <td>Melanoma</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>SKD</td>\n",
-       "      <td>dermis_NM3_orig</td>\n",
-       "      <td>Melanoma</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>SKD</td>\n",
-       "      <td>dermis_NM5_orig</td>\n",
-       "      <td>Melanoma</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>SKD</td>\n",
-       "      <td>dermis_NM6_orig</td>\n",
-       "      <td>Melanoma</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>SKD</td>\n",
-       "      <td>dermis_SSM10_orig</td>\n",
-       "      <td>Melanoma</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>SKD</td>\n",
-       "      <td>dermis_SSM13_orig</td>\n",
-       "      <td>Melanoma</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>SKD</td>\n",
-       "      <td>dermis_SSM15_orig</td>\n",
-       "      <td>Melanoma</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>SKD</td>\n",
-       "      <td>dermis_SSM17_orig</td>\n",
-       "      <td>Melanoma</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>SKD</td>\n",
-       "      <td>dermis_SSM19_orig</td>\n",
-       "      <td>Melanoma</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>SKD</td>\n",
-       "      <td>dermis_SSM5_orig</td>\n",
-       "      <td>Melanoma</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>SKD</td>\n",
-       "      <td>dermis_SSM7_orig</td>\n",
-       "      <td>Melanoma</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>SKD</td>\n",
-       "      <td>dermis_NM1_orig</td>\n",
-       "      <td>Melanoma</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   dataset                 ID diagnosis  diagnosis_id  DC_id\n",
-       "0      SKD   dermis_AMM1_orig  Melanoma             1     14\n",
-       "2      SKD   dermis_LMM2_orig  Melanoma             1     14\n",
-       "21     SKD   dermis_SSM1_orig  Melanoma             1     14\n",
-       "4      SKD   dermis_LMM5_orig  Melanoma             1     14\n",
-       "7      SKD    dermis_NM3_orig  Melanoma             1     14\n",
-       "9      SKD    dermis_NM5_orig  Melanoma             1     14\n",
-       "10     SKD    dermis_NM6_orig  Melanoma             1     14\n",
-       "11     SKD  dermis_SSM10_orig  Melanoma             1     14\n",
-       "14     SKD  dermis_SSM13_orig  Melanoma             1     14\n",
-       "16     SKD  dermis_SSM15_orig  Melanoma             1     14\n",
-       "18     SKD  dermis_SSM17_orig  Melanoma             1     14\n",
-       "20     SKD  dermis_SSM19_orig  Melanoma             1     14\n",
-       "40     SKD   dermis_SSM5_orig  Melanoma             1     14\n",
-       "41     SKD   dermis_SSM7_orig  Melanoma             1     14\n",
-       "5      SKD    dermis_NM1_orig  Melanoma             1     14"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_new = SKD_meta.iloc[[0,2,21,4,7,9,10,11,14,16,18,20,40,41,5]]\n",
-    "df_new"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(df_new))\n",
-    "path = 'test.csv'\n",
-    "df_new.to_csv(path,header=SKD_meta.columns, index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>path</th>\n",
-       "      <th>lesion_id</th>\n",
-       "      <th>ori_dx</th>\n",
-       "      <th>dx</th>\n",
-       "      <th>dx_idx</th>\n",
-       "      <th>dom</th>\n",
-       "      <th>dataset</th>\n",
-       "      <th>ID</th>\n",
-       "      <th>diagnosis</th>\n",
-       "      <th>diagnosis_id</th>\n",
-       "      <th>DC_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>images/P371/P371.png</td>\n",
-       "      <td>934</td>\n",
-       "      <td>SK</td>\n",
-       "      <td>Benign keratosis-like lesions</td>\n",
-       "      <td>4</td>\n",
-       "      <td>dmf</td>\n",
-       "      <td>DMF</td>\n",
-       "      <td>P371</td>\n",
-       "      <td>Benign Keratosis-Like Lesions</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>images/B402b/B402b.png</td>\n",
-       "      <td>668</td>\n",
-       "      <td>ML</td>\n",
-       "      <td>Melanocytic nevi</td>\n",
-       "      <td>1</td>\n",
-       "      <td>dmf</td>\n",
-       "      <td>DMF</td>\n",
-       "      <td>B402b</td>\n",
-       "      <td>Melanocytic Nevi</td>\n",
-       "      <td>4</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>images/A81/A81.png</td>\n",
-       "      <td>519</td>\n",
-       "      <td>SK</td>\n",
-       "      <td>Benign keratosis-like lesions</td>\n",
-       "      <td>4</td>\n",
-       "      <td>dmf</td>\n",
-       "      <td>DMF</td>\n",
-       "      <td>A81</td>\n",
-       "      <td>Benign Keratosis-Like Lesions</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>images/P404d/P404d.png</td>\n",
-       "      <td>394</td>\n",
-       "      <td>ML</td>\n",
-       "      <td>Melanocytic nevi</td>\n",
-       "      <td>1</td>\n",
-       "      <td>dmf</td>\n",
-       "      <td>DMF</td>\n",
-       "      <td>P404d</td>\n",
-       "      <td>Melanocytic Nevi</td>\n",
-       "      <td>4</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>images/P18/P18.png</td>\n",
-       "      <td>248</td>\n",
-       "      <td>ML</td>\n",
-       "      <td>Melanocytic nevi</td>\n",
-       "      <td>1</td>\n",
-       "      <td>dmf</td>\n",
-       "      <td>DMF</td>\n",
-       "      <td>P18</td>\n",
-       "      <td>Melanocytic Nevi</td>\n",
-       "      <td>4</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>722</th>\n",
-       "      <td>images/B721c/B721c.png</td>\n",
-       "      <td>814</td>\n",
-       "      <td>ML</td>\n",
-       "      <td>Melanocytic nevi</td>\n",
-       "      <td>1</td>\n",
-       "      <td>dmf</td>\n",
-       "      <td>DMF</td>\n",
-       "      <td>B721c</td>\n",
-       "      <td>Melanocytic Nevi</td>\n",
-       "      <td>4</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>723</th>\n",
-       "      <td>images/P93/P93.png</td>\n",
-       "      <td>478</td>\n",
-       "      <td>SK</td>\n",
-       "      <td>Benign keratosis-like lesions</td>\n",
-       "      <td>4</td>\n",
-       "      <td>dmf</td>\n",
-       "      <td>DMF</td>\n",
-       "      <td>P93</td>\n",
-       "      <td>Benign Keratosis-Like Lesions</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>724</th>\n",
-       "      <td>images/B246/B246.png</td>\n",
-       "      <td>1230</td>\n",
-       "      <td>IEC</td>\n",
-       "      <td>Actinic keratoses</td>\n",
-       "      <td>3</td>\n",
-       "      <td>dmf</td>\n",
-       "      <td>DMF</td>\n",
-       "      <td>B246</td>\n",
-       "      <td>Actinic Keratoses</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>725</th>\n",
-       "      <td>images/P354b/P354b.png</td>\n",
-       "      <td>352</td>\n",
-       "      <td>ML</td>\n",
-       "      <td>Melanocytic nevi</td>\n",
-       "      <td>1</td>\n",
-       "      <td>dmf</td>\n",
-       "      <td>DMF</td>\n",
-       "      <td>P354b</td>\n",
-       "      <td>Melanocytic Nevi</td>\n",
-       "      <td>4</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>726</th>\n",
-       "      <td>images/P175/P175.png</td>\n",
-       "      <td>242</td>\n",
-       "      <td>SK</td>\n",
-       "      <td>Benign keratosis-like lesions</td>\n",
-       "      <td>4</td>\n",
-       "      <td>dmf</td>\n",
-       "      <td>DMF</td>\n",
-       "      <td>P175</td>\n",
-       "      <td>Benign Keratosis-Like Lesions</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>727 rows × 11 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       path  lesion_id ori_dx                              dx  \\\n",
-       "0      images/P371/P371.png        934     SK  Benign keratosis-like lesions    \n",
-       "1    images/B402b/B402b.png        668     ML                Melanocytic nevi   \n",
-       "2        images/A81/A81.png        519     SK  Benign keratosis-like lesions    \n",
-       "3    images/P404d/P404d.png        394     ML                Melanocytic nevi   \n",
-       "4        images/P18/P18.png        248     ML                Melanocytic nevi   \n",
-       "..                      ...        ...    ...                             ...   \n",
-       "722  images/B721c/B721c.png        814     ML                Melanocytic nevi   \n",
-       "723      images/P93/P93.png        478     SK  Benign keratosis-like lesions    \n",
-       "724    images/B246/B246.png       1230    IEC               Actinic keratoses   \n",
-       "725  images/P354b/P354b.png        352     ML                Melanocytic nevi   \n",
-       "726    images/P175/P175.png        242     SK  Benign keratosis-like lesions    \n",
-       "\n",
-       "     dx_idx  dom dataset     ID                       diagnosis  diagnosis_id  \\\n",
-       "0         4  dmf     DMF   P371  Benign Keratosis-Like Lesions              2   \n",
-       "1         1  dmf     DMF  B402b                Melanocytic Nevi             4   \n",
-       "2         4  dmf     DMF    A81  Benign Keratosis-Like Lesions              2   \n",
-       "3         1  dmf     DMF  P404d                Melanocytic Nevi             4   \n",
-       "4         1  dmf     DMF    P18                Melanocytic Nevi             4   \n",
-       "..      ...  ...     ...    ...                             ...           ...   \n",
-       "722       1  dmf     DMF  B721c                Melanocytic Nevi             4   \n",
-       "723       4  dmf     DMF    P93  Benign Keratosis-Like Lesions              2   \n",
-       "724       3  dmf     DMF   B246               Actinic Keratoses             0   \n",
-       "725       1  dmf     DMF  P354b                Melanocytic Nevi             4   \n",
-       "726       4  dmf     DMF   P175  Benign Keratosis-Like Lesions              2   \n",
-       "\n",
-       "     DC_id  \n",
-       "0        8  \n",
-       "1       10  \n",
-       "2        8  \n",
-       "3       10  \n",
-       "4       10  \n",
-       "..     ...  \n",
-       "722     10  \n",
-       "723      8  \n",
-       "724      6  \n",
-       "725     10  \n",
-       "726      8  \n",
-       "\n",
-       "[727 rows x 11 columns]"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "read_df_new = pd.read_csv('/bigdata/siyiplace/data/skin_lesion/DMF/train_meta_60.csv', dtype={'ID': str})\n",
-    "read_df_new"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "727"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(read_df_new)"
+    "df.to_csv(SKD_meta_path, index=False)"
    ]
   }
  ],
